src/content/docs/en-us/0.9.x/items.md
---
title: Items
description: Item related tweaks
---

## Tooltips 💬

Adds more useful info to various tooltips. You can enable/disable each one.

- Clock. Shows current in-game time.
- Compass. Shows distance to compass' target.
- Recovery Compass. Shows distance to the last death spot.

## Lockpick 🔓

A creative only item that allows you to open things you shouldn't.

As of 0.7.0 you can pick:

- Villager inventories.

## Slightly Better Item Names ⚒⛏

Shows item durability (in %) if durability is < 100% or item count if count is > 1

<img class="inline-image" src="/assets/images/item-names.png" width="350" height="292">

## Infinite Totem of Undying ♾️♥️

<br/>
<img alt="A Minecraft beacon is shown on a structure made of diamond and netherite blocks at night. The beacon emits a bright vertical beam of light into the sky, and a glowing item frame is displayed beside it, there's a yellow totem with glowing white eyes in it. The surrounding area includes grass and trees under a dark sky." class="inline-image" src="/assets/images/infinite-totem.webp" width="520" height="293">

<sub>Works the same way as normal totem, but infinitely...</sub>

- To get one of these "totally not OP" totems, you need to have a level 4 beacon made from diamond or netherite blocks (or both).
- Now throw a nether star and a totem onto the beacon and watch them ascend.
- You can also disable ascension in the config and create your own way to get the totem.

## Balanced Mending ⚒️

Makes mending a bit less OP by making it remove the "Too Expensive" error instead of repairing items via XP.

Also sets anvil's XP cap to 40 levels, but not really because the cap is 40 + the amount of repair items.

Inspired by TheMisterEpic's "This Minecraft Enchantment has been BROKEN for 3 YEARS..." video

## Minecart Block Picking 🥒

Allows you to "pick up" blocks using minecarts. All contents and some properties are copied to the cart.

For the sake of balance, you can configure whether players can "pick up" spawners.

<auto-video width="544" height="306" alt="The player shift and clicks a bunch of blocks, and they appear as their minecart versions in the inventory" src="/assets/videos/minecart-block-picking.webm"></auto-video>
